--- a/config.toml
+++ b/config.toml
@@ -143,4 +143,5 @@ unsafe= true
         xing = "https://www.xing.com/profile/Michael_Peter94/"
         linkedin = "https://www.linkedin.com/in/michael-peter-4aa918107/"
         github = "https://github.com/Allaman"
+        freelancermap = "https://www.freelancermap.de/freelancer-verzeichnis/profile/it-infrastruktur/224527-profil-it-consultant.html"
         vcard = "/vcard.vcf"
