--- a/config.toml
+++ b/config.toml
@@ -129,7 +129,7 @@ share them with others because I believe <span style="color: #f05f40">learning a
   German (first language) | English<br>
 </p>
 """
-        buttonText  = "Experiences"
+        buttonText  = "Experience"
 
 
     # Portfolio scetion
