--- a/data/projects/life.yaml
+++ b/data/projects/life.yaml
@@ -1,5 +1,5 @@
 modalID: 3
-title: Improve the Build and Deployment Pipeline
+title: Improve Build and Deployment Pipelines
 img: pipeline.png
 client: Insurance Business
 clientLink: "#"
